--- a/Source/ZECore/CMakeLists.txt
+++ b/Source/ZECore/CMakeLists.txt
@@ -102,5 +102,5 @@ ze_add_library(ZECore
 	SOURCES ${Sources}
 	HEADERS ${Headers}
 	INSTALL
-	INSTALL_DESTINATION "ZECore"
+	INSTALL_DESTINATION "ZEEngineAPI/ZECore"
 	INSTALL_COMPONENT ZESDK)
