--- a/Source/ZEGame/CMakeLists.txt
+++ b/Source/ZEGame/CMakeLists.txt
@@ -81,5 +81,5 @@ ze_add_library(ZEGame
 	SOURCES ${Sources}
 	HEADERS ${Headers}
 	INSTALL
-	INSTALL_DESTINATION "ZEGame"
+	INSTALL_DESTINATION "ZEEngineAPI/ZEGame"
 	INSTALL_COMPONENT ZESDK)
