--- a/Source/ZEGraphics/ZEPostProcessor/CMakeLists.txt
+++ b/Source/ZEGraphics/ZEPostProcessor/CMakeLists.txt
@@ -62,5 +62,5 @@ ze_add_library(ZEPostProcessor
 	SOURCES ${Sources}
 	HEADERS ${Headers}
 	INSTALL
-	INSTALL_DESTINATION "ZEPostProcessor"
+	INSTALL_DESTINATION "ZEEngineAPI/ZEGraphics/ZEPostProcessor"
 	INSTALL_COMPONENT ZESDK)
