--- a/Source/ZEMap/CMakeLists.txt
+++ b/Source/ZEMap/CMakeLists.txt
@@ -46,5 +46,5 @@ ze_add_library(ZEMap
 	SOURCES ${Sources}
 	HEADERS ${Headers}
 	INSTALL
-	INSTALL_DESTINATION "ZEMap"
+	INSTALL_DESTINATION "ZEEngineAPI/ZEMap"
 	INSTALL_COMPONENT ZESDK)
