--- a/Source/ZEMeta/CMakeLists.txt
+++ b/Source/ZEMeta/CMakeLists.txt
@@ -58,5 +58,5 @@ ze_add_library(ZEMeta
 	SOURCES ${Sources}
 	HEADERS ${Headers}
 	INSTALL
-	INSTALL_DESTINATION "ZEMeta"
+	INSTALL_DESTINATION "ZEEngineAPI/ZEMeta"
 	INSTALL_COMPONENT ZESDK)
