--- a/Source/ZESound/CMakeLists.txt
+++ b/Source/ZESound/CMakeLists.txt
@@ -35,8 +35,8 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-add_subdirectory (ZEDirectSound)
-add_subdirectory (ZEOpenAL)
+ze_add_conditional_build(ZESound ZEDirectSound		TRUE TITLE "Build ZEDirectSound Sound Module.")
+ze_add_conditional_build(ZESound ZEOpenAL			TRUE TITLE "Build ZEOpenAL Sound Module.")
 
 ze_add_source(ZEListener.cpp				Sources)
 ze_add_source(ZEListener.h					Sources Headers ZEPP)
@@ -63,7 +63,7 @@ ze_add_source(ZESoundSource3D.h				Sources Headers ZEPP)
 ze_add_library(ZESound 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
-	LIBS libmpg123.lib libogg.lib libvorbis.lib libvorbisfile.lib
+	LIBS libmpg123 libogg libvorbis libvorbisfile
 	INSTALL
-	INSTALL_DESTINATION "ZESound"
+	INSTALL_DESTINATION "ZEEngineAPI/ZESound"
 	INSTALL_COMPONENT ZESDK)
