--- a/Source/ZEUI/CMakeLists.txt
+++ b/Source/ZEUI/CMakeLists.txt
@@ -82,5 +82,5 @@ ze_add_library(ZEUI
 	SOURCES ${Sources}
 	HEADERS ${Headers}
 	INSTALL
-	INSTALL_DESTINATION "ZEUI"
+	INSTALL_DESTINATION "ZEEngineAPI/ZEUI"
 	INSTALL_COMPONENT ZESDK)
