--- a/ZEFoundation/ZEFile/CMakeLists.txt
+++ b/ZEFoundation/ZEFile/CMakeLists.txt
@@ -54,5 +54,5 @@ ze_add_library(ZEFile
 	SOURCES ${Sources} 
 	HEADERS ${Headers} 
 	INSTALL
-	INSTALL_DESTINATION ZEFoundation/ZEFile
-	INSTALL_COMPONENT SDK)
+	INSTALL_DESTINATION ZEFoundationAPI/ZEFile
+	INSTALL_COMPONENT ZESDK)
