--- a/Source/ZEModel/CMakeLists.txt
+++ b/Source/ZEModel/CMakeLists.txt
@@ -62,5 +62,5 @@ ze_add_library(ZEModel
 	SOURCES ${Sources}
 	HEADERS ${Headers}
 	INSTALL
-	INSTALL_DESTINATION "ZEModel"
+	INSTALL_DESTINATION "ZEEngineAPI/ZEModel"
 	INSTALL_COMPONENT ZESDK)
