ADD : ZED3D9EDProcessor added. CHG : Player movement speed changed
svn path=/trunk/; revision=651

--- a/Source/ZEGraphics/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEGraphics/ZEDirect3D9/CMakeLists.txt
@@ -90,6 +90,9 @@ ze_add_source(ZED3D9VertexDeclaration.h			Sources)
 ze_add_source(ZED3D9ViewPort.cpp				Sources)
 ze_add_source(ZED3D9ViewPort.h					Sources)
 
+ze_add_source(ZED3D9EDProcessor.cpp				Sources)
+ze_add_source(ZED3D9EDProcessor.h					Sources)
+
 ze_add_library(ZEDirect3D9 
 	SOURCES ${Sources}
 	LIBS d3d9 d3dx9)
