--- a/Source/ZECore/CMakeLists.txt
+++ b/Source/ZECore/CMakeLists.txt
@@ -53,8 +53,8 @@ ze_add_source(ZEConsoleWindow.cpp					Sources)
 ze_add_source(ZEConsoleWindow.h						Sources Headers)
 ze_add_source(ZECore.cpp							Sources)
 ze_add_source(ZECore.h								Sources Headers)
-ze_add_source(ZEError.cpp							Sources)
-ze_add_source(ZEError.h								Sources Headers)
+ze_add_source(ZEErrorManager.cpp					Sources)
+ze_add_source(ZEErrorManager.h						Sources Headers)
 ze_add_source(ZEExtension.cpp						Sources)
 ze_add_source(ZEExtension.h							Sources Headers)
 ze_add_source(ZEExtensionDescription.cpp			Sources)
