FIX: Install fixes. ADD: Verbose flag added to linker.
svn path=/trunk/; revision=657

--- a/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/ZEFoundation/ZEDS/CMakeLists.txt
@@ -57,7 +57,7 @@ ze_add_library(ZEDS
 	HEADERS ${Headers}
 	LIBS ZEFoundationAPI
 	INSTALL
-	INSTALL_DESTINATION ZEFoundation/ZEDS
+	INSTALL_DESTINATION ZEFoundationAPI/ZEDS
 	INSTALL_COMPONENT ZESDK)
 	
 	
