--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /ZI")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /GL /Zi")
 
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ignore:4099")
-set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /LTCG /DEBUG")
+set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /LTCG /DEBUG /VERBOSE:LIB")
 
 
 ## Platform Detection
@@ -223,6 +223,18 @@ endif()
 set(ZEBUILD_BUILD_INSTALLER		TRUE CACHE BOOL "Build Installer.")
 
 if (ZEBUILD_BUILD_INSTALLER)
+	install(DIRECTORY Dll/${ZE_BUILD_PLATFORM}/ 
+		DESTINATION Bin 
+		CONFIGURATIONS Release
+		FILES_MATCHING 
+			PATTERN "*.dll" 
+			PATTERN "Debug" EXCLUDE
+			PATTERN "Release" EXCLUDE)
+
+	install(DIRECTORY Dll/${ZE_BUILD_PLATFORM}/Release/
+		DESTINATION Bin
+		CONFIGURATIONS Release)
+			
 	include(InstallRequiredSystemLibraries)
 
 	set(CPACK_PACKAGE_NAME "Zinek Engine")
