CHG: ZEProfiler renamed to ZEProfilerCounter. CHG: ZEProfilerManger renamed to ZEProfiler. CHG: ZEProfiler integrated to ZECore. CHG: ZERealTimeClock integrated to ZECore.
svn path=/trunk/; revision=660

--- a/Source/ZECore/CMakeLists.txt
+++ b/Source/ZECore/CMakeLists.txt
@@ -79,8 +79,8 @@ ze_add_source(ZEPluginManager.cpp					Sources)
 ze_add_source(ZEPluginManager.h						Sources Headers)
 ze_add_source(ZEProfiler.cpp						Sources)
 ze_add_source(ZEProfiler.h							Sources Headers)
-ze_add_source(ZEProfilerManager.cpp					Sources)
-ze_add_source(ZEProfilerManager.h					Sources Headers)
+ze_add_source(ZEProfilerCounter.cpp					Sources)
+ze_add_source(ZEProfilerCounter.h					Sources Headers)
 ze_add_source(ZERealTimeClock.cpp					Sources)
 ze_add_source(ZERealTimeClock.h						Sources Headers)
 ze_add_source(ZEResource.cpp						Sources)
