--- a/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/ZEFoundation/ZEDS/CMakeLists.txt
@@ -45,8 +45,18 @@ ze_add_source(ZEFlags.cpp				Sources)
 ze_add_source(ZEFlags.h					Sources Headers)
 ze_add_source(ZENamed.cpp				Sources)
 ze_add_source(ZENamed.h					Sources Headers)
+ze_add_source(ZEPointer.cpp				Sources)
+ze_add_source(ZEPointer.h				Sources Headers)
+ze_add_source(ZEPointerTests.cpp		Tests)
+ze_add_source(ZESharedPointer.cpp		Sources)
+ze_add_source(ZESharedPointer.h			Sources Headers)
+ze_add_source(ZESharedPointerTests.cpp	Tests)
+ze_add_source(ZEWeakPointer.cpp			Sources)
+ze_add_source(ZEWeakPointer.h			Sources Headers)
+ze_add_source(ZEWeakPointerTests.cpp	Tests)
 ze_add_source(ZEString.cpp				Sources)
 ze_add_source(ZEString.h				Sources Headers)
+ze_add_source(ZEStringTests.cpp			Tests)
 ze_add_source(ZETypedVariant.cpp		Sources)
 ze_add_source(ZETypedVariant.h			Sources Headers)
 ze_add_source(ZEVariant.cpp				Sources)
@@ -61,6 +71,6 @@ ze_add_library(ZEDS
 	INSTALL_COMPONENT ZESDK)
 	
 	
-ze_add_unit_tests(ZEStringTests 
-	SOURCES ZEStringTests.cpp 
+ze_add_bulk_unit_tests(ZEStringTests 
+	SOURCES ${Tests} 
 	TEST_TARGET ZEDS)
