--- a/ZEFoundation/ZEMath/CMakeLists.txt
+++ b/ZEFoundation/ZEMath/CMakeLists.txt
@@ -60,7 +60,7 @@ ze_add_source(ZEPlane.h					Sources Headers)
 ze_add_source(ZEPlaneTests.cpp			Tests)
 ze_add_source(ZEQuaternion.cpp			Sources)
 ze_add_source(ZEQuaternion.h			Sources Headers)
-ze_add_source(ZEQuaternionTests.cpp		Tests)
+#ze_add_source(ZEQuaternionTests.cpp		Tests)
 ze_add_source(ZERay.cpp					Sources)
 ze_add_source(ZERay.h					Sources Headers)
 ze_add_source(ZERayTests.cpp			Tests)
