ADD: ZEDelegate class added. CHG: ZECommand integrated with ZEString. CHG: ZEOptions integrated with ZEString.cpp ADD: ZEOption callbacks replaced with OnChanging and OnChanged event handlers. CHG: ZEFastDelegate moved to ZEDS. FIX: ZEArray::MassAdd memory overflow bug fixed. REM: ZEDSDefinitions has been removed. CHG: ZETest check macros renamed to simpler CHECK variants. FIX: ZETFontFile memory.h compile problem fixed.
svn path=/trunk/; revision=670

--- a/ZETest/CMakeLists.txt
+++ b/ZETest/CMakeLists.txt
@@ -52,5 +52,5 @@ ze_add_source(ZETestManager.h		Source)
 ze_add_source(ZETestTimer.cpp		Source)
 ze_add_source(ZETestTimer.h			Source)
 
-ze_add_library(ZETest SOURCES ${Source} LIBS libUnitTestCpp)
+ze_add_library(ZETest SOURCES ${Source})
 
