--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,11 +133,6 @@ append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS
 	ZE_ZINEK_VERSION_BUILD=${ZE_ZINEK_VERSION_BUILD}
 	ZE_ZINEK_VERSION_PLATFORM)
 
-append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG 
-	ZE_DEBUG_ENABLED 
-	ZE_DEBUG_BREAK_ON_ERROR 
-	_ZE_DEBUG_BREAK_ON_WARNING
-	_ZE_DEBUG_ENABLE_MEMORY_CHECKS)
 	
 
 ## Static Checking & Testing Options
@@ -148,6 +143,25 @@ set(ZEBUILD_STATIC_CHECKS_ENABLE_PCLINT		FALSE	CACHE BOOL "Enable pc-lint static
 set(ZEBUILD_UNIT_TESTS_ENABLE				TRUE	CACHE BOOL "Enable unit tests.")
 set(ZEBUILD_UNIT_TESTS_COVERAGE_ENABLE		TRUE	CACHE BOOL "Enables code coverage instrumentation.")
 set(ZEBUILD_DEBUG_MODE						FALSE	CACHE BOOL "Enable ZEBuild debug mode.")
+set(ZEBUILD_DEBUG_HEAP_CHECK_ENABLE			FALSE	CACHE BOOL "Enable heap checking.")
+set(ZEBUILD_DEBUG_BREAK_ON_ERRORS			TRUE	CACHE BOOL "Break if an error occures.")
+set(ZEBUILD_DEBUG_BREAK_ON_WARNINGS			FALSE	CACHE BOOL "Break if an warning occures.")
+
+if (ZEBUILD_DEBUG_MODE)
+	append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG ZE_DEBUG_ENABLED)
+	
+	if (ZEBUILD_DEBUG_HEAP_CHECK_ENABLE)
+		append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG ZE_DEBUG_BREAK_ON_ERROR)
+	endif()
+
+	if (ZEBUILD_DEBUG_BREAK_ON_ERRORS)
+		append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG _ZE_DEBUG_BREAK_ON_WARNING)
+	endif()
+
+	if (ZEBUILD_DEBUG_BREAK_ON_WARNINGS)
+		append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG ZE_DEBUG_MEMORY_CHECKS_ENABLE)
+	endif()
+endif()
 
 if (ZEBUILD_UNIT_TESTS_ENABLE)
 	ENABLE_TESTING()
