--- a/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/ZEFoundation/ZEDS/CMakeLists.txt
@@ -39,12 +39,14 @@ ze_add_source(ZEAllocator.cpp			Sources)
 ze_add_source(ZEAllocator.h				Sources Headers)
 ze_add_source(ZEArray.cpp				Sources)
 ze_add_source(ZEArray.h					Sources Headers)
-ze_add_source(ZEDSDefinitions.cpp		Sources)
-ze_add_source(ZEDSDefinitions.h			Sources Headers)
+ze_add_source(ZEDelegate.cpp			Sources)
+ze_add_source(ZEDelegate.h				Sources Headers)
+ze_add_source(ZEDelegateImp.h			Sources Headers)
+ze_add_source(ZEDelegateTests.cpp		Tests)
+ze_add_source(ZEFastDelegate.h			Sources Headers)
+ze_add_source(ZEFastDelegateBind.h		Sources Headers)
 ze_add_source(ZEFlags.cpp				Sources)
 ze_add_source(ZEFlags.h					Sources Headers)
-ze_add_source(ZENamed.cpp				Sources)
-ze_add_source(ZENamed.h					Sources Headers)
 ze_add_source(ZEPointer.cpp				Sources)
 ze_add_source(ZEPointer.h				Sources Headers)
 ze_add_source(ZEPointerTests.cpp		Tests)
