--- a/ZEFoundation/ZEFile/CMakeLists.txt
+++ b/ZEFoundation/ZEFile/CMakeLists.txt
@@ -43,12 +43,12 @@ ze_add_source(ZECompressedFile.cpp	Sources)
 ze_add_source(ZECompressedFile.h	Sources Headers)
 ze_add_source(ZEFile.cpp			Sources)
 ze_add_source(ZEFile.h				Sources Headers)
+ze_add_source(ZEPartialFile.cpp		Sources)
+ze_add_source(ZEPartialFile.h		Sources Headers)
 ze_add_source(ZEFileCache.cpp		Sources)
 ze_add_source(ZEFileCache.h			Sources Headers)
 ze_add_source(ZEPack.cpp			Sources)
 ze_add_source(ZEPack.h				Sources Headers)
-ze_add_source(ZEResourceFile.cpp	Sources)
-ze_add_source(ZEResourceFile.h		Sources Headers)
 
 ze_add_library(ZEFile 
 	SOURCES ${Sources} 
