ADD: Blur Processor added. CHG: Some comments changed/improved. IMP: User can now change alpha of the gauss filter. FIX: A bug that occurs when adding "resources//" to the beginning of resource path has been fixed. CHG: Unnecessary warnings in partial file are removed. FIX: Cube Texture loading fixed.
svn path=/trunk/; revision=689

--- a/Source/ZEGraphics/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEGraphics/ZEDirect3D9/CMakeLists.txt
@@ -41,6 +41,8 @@ append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG
 
 add_subdirectory (ZED3D9PostProcessor)
 
+ze_add_source(ZED3D9BlurProcessor.cpp			Sources)
+ze_add_source(ZED3D9BlurProcessor.h				Sources)
 ze_add_source(ZED3D9ColorTransformProcessor.cpp	Sources)
 ze_add_source(ZED3D9ColorTransformProcessor.h	Sources)
 ze_add_source(ZED3D9CommonTools.cpp				Sources)
