ADD: ZEAIPathFollowingSteering added. ADD: ZEAISeparateSteering added. ADD: ZEAIFrictionSteering added. ADD: ZEAICollisionAvoidanceSteering added. ADD: Steering blending added to ZEAIActor. ADD: Steering prioritized blending added to ZEAIActor. CHG: ZEAngle interface has been improved. REM: ZEAngle degree functions removed. Not it is working only radian. ADD: Trigonometric functions added ZEAngle. ADD: ZEMath class added. ZEMath class contains common mathematical functions such as square root, log, exponent, abs and etc. ADD: Scalar vs Matrix/Vector operators added to ZEVector* and ZEMatrix*x*.
svn path=/trunk/; revision=702

--- a/ZEFoundation/ZEMath/CMakeLists.txt
+++ b/ZEFoundation/ZEMath/CMakeLists.txt
@@ -51,6 +51,8 @@ ze_add_source(ZELineTests.cpp			Tests)
 ze_add_source(ZELineSegment.cpp			Sources)
 ze_add_source(ZELineSegment.h			Sources Headers)
 ze_add_source(ZELineSegmentTests.cpp	Tests)
+ze_add_source(ZEMath.h					Source Headers)
+ze_add_Source(ZEMath.cpp				Source)
 ze_add_source(ZEMatrix.cpp				Sources)
 ze_add_source(ZEMatrixTests.cpp			Tests)
 ze_add_source(ZEMatrix.h				Sources Headers)
@@ -62,7 +64,7 @@ ze_add_source(ZEPlane.h					Sources Headers)
 ze_add_source(ZEPlaneTests.cpp			Tests)
 ze_add_source(ZEQuaternion.cpp			Sources)
 ze_add_source(ZEQuaternion.h			Sources Headers)
-#ze_add_source(ZEQuaternionTests.cpp		Tests)
+#ze_add_source(ZEQuaternionTests.cpp	Tests)
 ze_add_source(ZERay.cpp					Sources)
 ze_add_source(ZERay.h					Sources Headers)
 ze_add_source(ZERayTests.cpp			Tests)
