--- a/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/ZEFoundation/ZEDS/CMakeLists.txt
@@ -39,6 +39,7 @@ ze_add_source(ZEAllocator.cpp			Sources)
 ze_add_source(ZEAllocator.h				Sources Headers)
 ze_add_source(ZEArray.cpp				Sources)
 ze_add_source(ZEArray.h					Sources Headers)
+ze_add_source(ZEArrayTests.cpp	Tests)
 ze_add_source(ZEDelegate.cpp			Sources)
 ze_add_source(ZEDelegate.h				Sources Headers)
 ze_add_source(ZEDelegateImp.h			Sources Headers)
@@ -47,6 +48,7 @@ ze_add_source(ZEFastDelegate.h			Sources Headers)
 ze_add_source(ZEFastDelegateBind.h		Sources Headers)
 ze_add_source(ZEFlags.cpp				Sources)
 ze_add_source(ZEFlags.h					Sources Headers)
+ze_add_source(ZEFlagsTests.cpp	Tests)
 ze_add_source(ZEPointer.cpp				Sources)
 ze_add_source(ZEPointer.h				Sources Headers)
 ze_add_source(ZEPointerTests.cpp		Tests)
@@ -63,6 +65,7 @@ ze_add_source(ZETypedVariant.cpp		Sources)
 ze_add_source(ZETypedVariant.h			Sources Headers)
 ze_add_source(ZEVariant.cpp				Sources)
 ze_add_source(ZEVariant.h				Sources Headers)
+ze_add_source(ZEVariantTests.cpp		Tests)
 
 ze_add_library(ZEDS 
 	SOURCES ${Sources} 
