FIX: A typo which results in linker errors in the file ZEMath/CMakeLists.txt is fixed. Dummy line to be able to commit...
svn path=/trunk/; revision=706

--- a/ZEFoundation/ZEMath/CMakeLists.txt
+++ b/ZEFoundation/ZEMath/CMakeLists.txt
@@ -51,8 +51,8 @@ ze_add_source(ZELineTests.cpp			Tests)
 ze_add_source(ZELineSegment.cpp			Sources)
 ze_add_source(ZELineSegment.h			Sources Headers)
 ze_add_source(ZELineSegmentTests.cpp	Tests)
-ze_add_source(ZEMath.h					Source Headers)
-ze_add_Source(ZEMath.cpp				Source)
+ze_add_source(ZEMath.h					Sources Headers)
+ze_add_Source(ZEMath.cpp				Sources)
 ze_add_source(ZEMatrix.cpp				Sources)
 ze_add_source(ZEMatrixTests.cpp			Tests)
 ze_add_source(ZEMatrix.h				Sources Headers)
