CHG: ZETest library and test cmake scripts has been improved and refactored. CHG: ZEDS and ZEMath unit tests migrated to new ZETest library. ADD: ZEMinHeap and ZEMaxHeap added to ZEDS library. ADD: ZEGraph, ZEList and ZETree data structure's files added top ZEDS. WARNING !!! However  they are not implemented. REM: Old test directories has been removed.
svn path=/trunk/; revision=707

--- a/ZEFoundation/ZEMath/CMakeLists.txt
+++ b/ZEFoundation/ZEMath/CMakeLists.txt
@@ -92,7 +92,7 @@ ze_add_library(ZEMath
 	INSTALL_DESTINATION ZEFoundationAPI/ZEMath
 	INSTALL_COMPONENT ZESDK)
 	
-ze_add_bulk_unit_tests(
+ze_add_unit_tests(ZEMathTests
 	SOURCES ${Tests}
 	EXTRA_SOURCES ZEMathIOStreamMapping.cpp ZEMathIOStreamMapping.h
 	TEST_TARGET ZEMath)
